# internal/router/user_api_router.go
@@ -15,9 +15,17 @@ func NewUserApiRouter(userController *controller.UserController) *UserApiRouter 
 
 func (a *UserApiRouter) Register(r *gin.RouterGroup) {
 	userGroup := r.Group("/users")
+	// 邮箱相关
 	userGroup.POST("/email/verification-codes", a.userController.SendEmailVerificationCode)
 	userGroup.POST("/registrations/email", a.userController.RegisterUserByEmail)
 	userGroup.POST("/sessions/email", a.userController.LoginByEmail)
+	// 手机号相关
+	userGroup.POST("/phone/verification-codes", a.userController.SendPhoneVerificationCode)
+	userGroup.POST("/phone/login-verification-codes", a.userController.SendPhoneLoginCode)
+	userGroup.POST("/registrations/phone", a.userController.RegisterUserByPhone)
+	userGroup.POST("/sessions/phone", a.userController.LoginByPhone)
+	userGroup.POST("/sessions/phone/code", a.userController.LoginByPhoneCode)
+	// 密码相关
 	userGroup.POST("/password/reset-codes", a.userController.SendPasswordResetCode)
 	userGroup.PUT("/password", a.userController.ChangePassword)
 }
